<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:background="#eeefef" >

        <TextView
            android:id="@+id/tvColorLabel"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/tvTitleColor"
            android:textSize="17dp"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:textAlignment="center"
            android:textColor="#000000"/>
        <Spinner
            android:id="@+id/spTitleColor"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_below="@+id/layout1"
        android:background="#d6d7d7" >

        <TextView
            android:id="@+id/tvDateLabel"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/tvDateColor"
            android:textSize="17dp"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:textAlignment="center"
            android:textColor="#000000"/>
        <Spinner
            android:id="@+id/spDateColor"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_below="@id/layout2"
        android:background="#bebfbf" >

        <TextView
            android:id="@+id/tvFontSizeLabel"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/txtTitleSize"
            android:textSize="15dp"
            android:textStyle="bold"
            android:paddingTop="25dp"
            android:textAlignment="center"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/etTextSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_below="@id/layout3"
        android:background="#a6a7a7" >

        <TextView
            android:id="@+id/tvNumberOfItems"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/txtItemsDisplay"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#000000"/>

        <RadioGroup
            android:id="@+id/rgItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <RadioButton
                android:id="@+id/rad3Items"
                android:text="@string/rad_3_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/rad5Items"
                android:text="@string/rad_5_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/rad10Items"
                android:text="@string/rad_10_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>

        </RadioGroup>
    </LinearLayout>

    <!--<Button-->
        <!--android:id="@+id/btnKnicksFeed"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="125dp"-->
        <!--android:text="knicks" />-->

    <!--<Button-->
        <!--android:id="@+id/btnRaptorsFeed"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignStart="@+id/btnKnicksFeed"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginTop="207dp"-->
        <!--android:text="raps" />-->



</RelativeLayout>